--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,6 @@
     ], 
     "minimum-stability": "dev",    
     "require": {
-        "sopinet/composergeneric": "dev-master"
+        "sopinet/composergeneric": "dev-2.6beta"
     }
 }
